# reachy-nova

./: .env.sample  .gitignore  CLAUDE.md  README.md  docker-compose.nervous-system.yml  index.html  pyproject.toml
config/: deployment-pi.yaml  deployment.yaml  emotions.yaml
config/mosquitto/: mosquitto.conf
config/nervous-system/: rules.yaml
docker/nervous-system/: Dockerfile  heartbeat.py  nervous_system.py  requirements.txt
docs/: architecture.md  main.md  reachy-mini-specs.md  setup-pi.md  setup-spark.md  setup.md  start-state.md  suspend-os.md
docs/components/: continous_experience.md  face_recognition.md  growth.md  head-gestures.md  nova_browser.md  nova_memory.md  nova_slack.md  nova_sonic.md  nova_vision.md  patting.md  skills.md  somatic-governor.md  temporal-awareness.md  tracking.md
docs/configuration/: antenna-calibration.md  openwakeword.md
docs/plans/: discord.md  nervous-system.md  nova-2-sonic.md
reachy_nova/: __init__.py  antenna_animator.py  api_routes.py  audio_pipeline.py  config.py  emotions.py  face_manager.py  face_recognition.py  gestures.py  main.py  movement_math.py  nova_browser.py  nova_context.py  nova_feedback.py  nova_memory.py  nova_mqtt.py  nova_slack.py  nova_sonic.py  nova_vision.py  safety.py  session_state.py  skill_executors.py  skills.py  sleep_mode.py  sleep_orchestrator.py  state.py  temporal.py  tracking.py  wake_word.py  wake_word_base.py  wake_word_factory.py  wake_word_oww.py  xmos_aec.py
reachy_nova/skills/browse/: SKILL.md
reachy_nova/skills/control/: SKILL.md
reachy_nova/skills/face/: SKILL.md
reachy_nova/skills/focus/: SKILL.md
reachy_nova/skills/gesture/: SKILL.md
reachy_nova/skills/look/: SKILL.md
reachy_nova/skills/memory/: SKILL.md
reachy_nova/skills/mood/: SKILL.md
reachy_nova/skills/remember_negatively/: SKILL.md
reachy_nova/skills/remember_positively/: SKILL.md
reachy_nova/skills/slack/: SKILL.md
reachy_nova/static/: index.html  main.js  style.css
tools/: sonic_demo.py
